--- a/projects/cameraZoom/index.html
+++ b/projects/cameraZoom/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-    <link href="../lib/canvas-page.css" type="text/stylesheet">
+    <link href="../lib/canvas-page.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <canvas></canvas>
