--- a/jump/index.html
+++ b/jump/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <title>Jump</title>
 
-    <script type="text/javascript" src="../build/app.min.js"></script>
+    <script type="text/javascript" src="build/app.min.js"></script>
   </head>
   <body>
     <h1>Loading Jump...</h1>
